<resources>
    <string name="app_name">RedditGram</string>

    <!-- Strings for actions -->
    <string name="action_settings">Settings</string>
    <string name="action_subreddits">Subreddits</string>
    <string name="action_search">Search Subreddit</string>

    <!-- Strings for NSFW Preferences -->
    <string name="pref_in_title">Settings</string>
    <string name="pref_in_nsfw">NFSW Content</string>
    <string name="pref_in_nsfw_key" translatable="false">pref_in_nsfw</string>

    <!-- String for Sorting Preferences -->
    <string name="pref_sorting_key" translatable="false">pref_sorting</string>
    <string name="pref_sorting_title">Sorting</string>
    <string name="pref_sorting_new">New</string>
    <string name="pref_sorting_hot">Top</string>
    <string name="pref_sorting_hot_default">new</string>
    <string name="pref_sorting_new_value" translatable="false">new</string>
    <string name="pref_sorting_hot_value" translatable="false">hot</string>


    <!-- Strings for Download Directory Preferences -->
    <string name="pref_in_download_title">Download Directory</string>
    <string name="pref_in_download_key" translatable="false">pref_in_download</string>
    <string name="pref_in_default_download">/Downloads</string>

    <!-- Error message -->
    <string name="loading_error_message">Failed to load posts from Reddit. Check your internet connection</string>
    <string name="tap_to_reload">Tap to reload</string>

</resources>
