<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:key="@string/pref_in_nsfw_key"
        android:title="@string/pref_in_nsfw"
        android:defaultValue="false" />

    <ListPreference
        android:key="@string/pref_sorting_key"
        android:title="@string/pref_sorting_title"
        android:dialogTitle="@string/pref_sorting_title"
        android:entries="@array/pref_sorting_entries"
        android:entryValues="@array/pref_sorting_values"
        android:defaultValue="@string/pref_sorting_hot_default"
        android:summary="%s"/>

    <EditTextPreference
        android:key="@string/pref_in_download_key"
        android:title="@string/pref_in_download_title"
        android:defaultValue="@string/pref_in_default_download" />

</android.support.v7.preference.PreferenceScreen>